<resources>
    <string name="app_name">MyTrip</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="calcular">Calcular</string>
    <string name="valores_validos">Por favor, informe valores válidos!</string>
    <string name="total_de_km">Total de KM</string>
    <string name="preco_por_litro">preço por litro</string>
    <string name="kms_por_litro">Kms por litro</string>
    <string name="seu_gasto_total_sera_de">Seu gasto total sera de:</string>
</resources>
