<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/editDistance"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/customEditText"
        android:gravity="center"
        android:hint="@string/distancia"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/total_de_km"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGray"
        android:textSize="10sp"/>


    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/customEditText"
        android:gravity="center"
        android:hint="@string/preco"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/preco_por_litro"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGray"
        android:textSize="10sp"/>

    <EditText
        android:id="@+id/editAutonomy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/customEditText"
        android:gravity="center"
        android:hint="@string/autonomia"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/kms_por_litro"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGray"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="10sp"
        android:text="@string/seu_gasto_total_sera_de"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/editResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="35sp"
        android:textColor="@color/colorRed"
        android:text="R$ 0,00"/>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_btn"
        android:text="@string/calcular"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:textAllCaps="true"
        android:textColor="@color/colorLightGray"
        android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>